Override ids for left and right sidebars - BUG.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
- Theme Name:   OADP
- Theme URI:    http://example.com/oadp-theme/
- Description:  Theme for OADP
+ Theme Name:   OCDLA
+ Theme URI:    http://example.com/ocdla-theme/
+ Description:  Theme for OCDLA
  Author:       John Doe
  Author URI:   http://example.com
  Template:     wireframe
@@ -9,7 +9,7 @@
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
- Text Domain:  wireframechild
+ Text Domain:  ocdlachild
 */
 
 /*Global Header Styles*/
