--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
- Text Domain:  ocdlachild
+ Text Domain:  wireframechild_ocdla
 */
 
 /*Global Header Styles*/
