--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 }	
 
 body:not(.home) .site-content-contain {
-	margin-top:95px;
+	margin-top:115px;
 }
 
 ul.gradient-background {
@@ -161,7 +161,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-	font-size:2.5em;
+	font-size:1.8em;
+}
+
+h1.entry-title {
+	margin-bottom:3.0em;
+	font-size:2.4em;
+	color:rgba(0,0,0,0.5);
 }
 
 h2 {
