--- a/assets/css/editor-blocks.css
+++ b/assets/css/editor-blocks.css
@@ -11,8 +11,8 @@ body:not(.home) h1.entry-title {
 
 .editor-post-title__block .editor-post-title__input {
 	margin-bottom: 1.5em;
-	font-size: 2.4em;
-	color: rgba(0,0,0,0.5);
+	font-size: 2.4em !important;
+	color: rgba(0,0,0,0.5) !important;
 	color: inherit;
 	font-weight: 800;
 	text-transform: uppercase;
