--- a/style.css
+++ b/style.css
@@ -187,6 +187,11 @@ h2, h3, h4, h5, h6 {
 	margin-bottom:0px;
 }
 
+h2 {
+	margin-top:0;
+	padding-top:2.0em;
+}
+
 h5, h6 {
 	font-size: 0.83em;
 }
@@ -207,5 +212,5 @@ h1 + h2 {
 
 
 .bottom-spacer {
-	margin-bottom: 25px;
+	margin-bottom: 100px;
 }
