--- a/style.css
+++ b/style.css
@@ -224,6 +224,12 @@ h2 {
 	margin-bottom: 75px;
 }
 
+.top-spacer {
+	padding-top: 25px;
+	clear:both;
+	float:none;
+}
+
 .wp-block-image img {
    /* padding-top: 1.0em !important;*/
 }
