--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ h4 {
 }
 
 h2, h3, h4, h5, h6 {
-	margin-top:3.0em;
+	margin-top:1.15em;
 	margin-bottom:0px;
 }
 
@@ -253,3 +253,10 @@ h2 {
 .bottom-spacer + h1 {
 	padding-top:70px;
 }
+
+
+
+
+.video-container { position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; }
+
+.video-container iframe, .video-container object, .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
